--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "create": "node ./services/dbConnect createTables"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "cloudinary": "^1.41.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.2"
+    "make-runnable": "^1.4.1",
+    "nodemon": "^3.0.2",
+    "pg": "^8.11.3"
   }
 }
